cmake_minimum_required(VERSION 3.8)
project(simple_node)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(rclcpp REQUIRED)
find_package(ament_cmake REQUIRED)
find_package(simple_library REQUIRED)
find_package(simple_library_ament REQUIRED)

add_executable(${PROJECT_NAME}
  src/simple_node.cpp
  include/simple_node/simple_node.hpp)
ament_target_dependencies(${PROJECT_NAME} rclcpp simple_library_ament)
target_link_libraries(${PROJECT_NAME} simple_library)

target_include_directories(
  ${PROJECT_NAME} PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)

# ノードは `ros2 run` コマンドで動くので lib へのインストールとなる
# https://answers.ros.org/question/361258/why-ros2-run-executables-are-installed-in-libproject_name/
install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION lib/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights comment the
  # line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo) comment the line
  # when this package is in a git repo and when a copyright and license is added
  # to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
